dodano hamburger menu

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -2,6 +2,7 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-family: $base-font-family;
+  color: #4f506f;
 
   @media #{$mq-medium} {
     font-size: $base-font-size * 1;
