--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -9,6 +9,7 @@
   border-radius: 30px;
   font-weight: 500;
   box-sizing: border-box;
+  font-size: 0.9rem;
 
   &--outline {
     border: 1px solid #fff;
@@ -20,4 +21,14 @@
   &--white {
     background: $color-secondary;
   }
+}
+.btn-scroll {
+  background: $color-secondary;
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem auto;
 }
