--- a/src/sass/layout/_general.scss
+++ b/src/sass/layout/_general.scss
@@ -1,5 +1,7 @@
 .container {
   margin: 0 4%;
+  height: 100%;
+  position: relative;
 
   @media #{$mq-medium} {
     margin: 0 8%;
@@ -15,4 +17,10 @@
 }
 .d-flex {
   display: flex;
+}
+.pre-title {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 0.0625rem;
 }
