--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
   width: 100%;
   height: 50vh;
-  background-image: url("/../assets/img/bg.jpg");
+  background-image: url("./../assets/img/bg.jpg");
   background-size: cover;
   min-height: 700px;
   display: flex;
