--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -4,7 +4,7 @@
   &__title {
     display: flex;
     align-items: center;
-    margin-bottom: 2.5rem;
+    padding: 4rem 0;
   }
   &__title-heading {
     font-family: $secondary-font-family;
@@ -248,5 +248,19 @@
   &__logo {
     max-width: 150px;
     height: auto;
+  }
+}
+.testimonials {
+  &__bg {
+    background: #d9be8f;
+    position: relative;
+  }
+  &__wrapper {
+    display: flex;
+    padding: 4rem 0;
+
+    @media all and (max-width: #{$bp-medium}) {
+      flex-direction: column;
+    }
   }
 }
