--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,9 +20,13 @@
 
 @import "components/logo";
 
+@import "components/triangle";
+
 @import "components/slider";
 
 @import "components/product-box";
+
+@import "components/testimonial";
 
 @import "layout/general";
 
