--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,6 +1,6 @@
 .slider {
   width: 100%;
-  height: 50vh;
+  height: 100%;
   background-image: url("./../assets/img/bg.jpg");
   background-size: cover;
   min-height: 700px;
