--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,12 +5,20 @@
     padding: 2.5rem 0;
     display: flex;
     justify-content: space-between;
+
+    @media all and (max-width: #{$bp-medium}) {
+      flex-direction: column;
+    }
   }
   &__section-title {
     color: #fff;
     text-transform: uppercase;
     font-size: 1rem;
     margin-bottom: 1.5rem;
+
+    @media all and (max-width: #{$bp-medium}) {
+      margin-top: 1.5rem;
+    }
 
     &--word-spacing {
       word-spacing: 0.4rem;
@@ -48,6 +56,8 @@
   }
   &__form {
     border: 1px solid #717171;
+    display: flex;
+    height: 50px;
   }
   &__input {
     background: none;
@@ -56,6 +66,9 @@
     padding: 0.7rem 1.5rem;
     font-family: $base-font-family;
     font-size: 0.85rem;
+    height: 100%;
+    flex: 3;
+    padding: 25px;
   }
   &__btn {
     color: #fff;
@@ -63,5 +76,6 @@
     background: #717171;
     padding: 0.7rem;
     cursor: pointer;
+    flex: 1;
   }
 }
