--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -1,5 +1,6 @@
 .nav {
   height: 100%;
+
   &__list {
     display: flex;
     align-items: center;
@@ -36,13 +37,12 @@
 
   @media all and (max-width: #{$bp-large}) {
     display: block;
-    margin: 1em;
     width: 40px;
     cursor: pointer;
     order: -1;
-    position: fixed;
-    top: 80px;
-    left: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     z-index: 1001;
     transform: translateY(-50%);
   }
