--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700|Playfair+Display:400i,700i&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico:400|Lato:300,400,700|Playfair+Display:400i,700i&display=swap");
 
 // Breakpoints
 $bp-small: 48em; // 768px
@@ -21,7 +21,7 @@ $base-line-height: 1.2;
 $header-line-height: 1.25;
 $base-font-family: "Lato", sans-serif;
 $secondary-font-family: "Playfair Display", serif;
-$logo-font-family: "Krinkes Decor PERSONAL USE";
-
+// $logo-font-family: "Krinkes Decor PERSONAL USE";
+$logo-font-family: "Pacifico", cursive;
 $color-primary: #6e45e3;
 $color-secondary: #fff;
