poprawienie wyświetlania fontów

--- a/src/sass/components/_testimonial.scss
+++ b/src/sass/components/_testimonial.scss
@@ -25,6 +25,8 @@
     color: #fff;
     line-height: 1.4;
     font-family: $secondary-font-family;
+    font-style: italic;
+    font-weight: 400;
     margin-bottom: 1rem;
     font-size: 1.1rem;
   }
@@ -34,5 +36,6 @@
     font-size: 1.8rem;
     color: #000;
     font-weight: 700;
+    font-style: italic;
   }
 }
