--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -21,6 +21,26 @@
   text-transform: uppercase;
   font-size: 0.85rem;
 
+  @media all and (max-width: #{$bp-medium}) {
+    background: transparent;
+  }
+  &__text {
+    @media all and (max-width: #{$bp-medium}) {
+      display: none;
+    }
+  }
+
+  &__icon {
+    display: none;
+
+    @media all and (max-width: #{$bp-medium}) {
+      display: block;
+      color: #000;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+  }
+
   &__dropdown {
     background: lightgray;
     color: #000;
