--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -11,6 +11,10 @@
   position: relative;
   background-position: center;
 
+  @media all and (max-width: #{$bp-medium}) {
+    height: auto;
+  }
+
   &__content {
     width: 20rem;
     height: 20rem;
