--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -29,6 +29,8 @@
   &__link {
     padding-right: 1.5rem;
     font-family: $secondary-font-family;
+    font-style: italic;
+    font-weight: 400;
     font-size: 1.1rem;
   }
 }
