--- a/src/sass/components/_testimonial.scss
+++ b/src/sass/components/_testimonial.scss
@@ -2,12 +2,20 @@
   display: flex;
   align-items: center;
 
+  @media all and (max-width: #{$bp-medium}) {
+    flex-direction: column-reverse;
+    margin-top: 2rem;
+  }
+
   &__img {
     width: auto !important;
     height: auto !important;
 
     &--reverse {
       order: -1;
+      @media all and (max-width: #{$bp-medium}) {
+        order: 0;
+      }
     }
   }
   &__wrapper {
@@ -15,11 +23,27 @@
     flex-direction: column;
     padding: 0 2rem 0 0;
 
+    @media all and (max-width: #{$bp-medium}) {
+      flex-direction: column-reverse;
+
+      padding: 0;
+    }
     &--to-right {
       text-align: right;
       padding: 0 0 0 2rem;
+
+      @media all and (max-width: #{$bp-medium}) {
+        padding: 0;
+        text-align: left;
+      }
     }
   }
+  &__header {
+    @media all and (max-width: #{$bp-medium}) {
+      margin: 0.5rem 0;
+    }
+  }
+
   &__text {
     order: -1;
     color: #fff;
