--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
   width: 100%;
   height: 100%;
-  background-image: url("./../assets/img/bg.jpg");
+
   background-size: cover;
   min-height: 700px;
   display: flex;
@@ -14,7 +14,34 @@
   @media all and (max-width: #{$bp-medium}) {
     height: auto;
   }
+  &__image {
+    position: absolute;
+    @include position-element($top: 0, $left: 0, $z-index: -1);
+    min-height: 700px;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: top;
+    opacity: 0;
+    transition: 0.4s opacity ease-in-out;
 
+    &--first {
+      background-image: url("./../assets/img/bg.jpg");
+    }
+    &--second {
+      background-image: url("./../assets/img/waiting-410328_1920.jpg");
+    }
+    &--third {
+      background-image: url("./../assets/img/girl-2931287_1920.jpg");
+      // background-position: right;
+    }
+    &--fourth {
+      background-image: url("./../assets/img/girl-1828536_1920.jpg");
+    }
+    &--active {
+      opacity: 1;
+    }
+  }
   &__content {
     width: 20rem;
     height: 20rem;
